# PoC

./: .flake8  .gitignore  .gitmodules  README.md  test.txt
.github/: pull_request_template.md  unit-test.yml
.github/workflows/: auto-merge.yml  automerge-development.yml  automerge.yml  build.yml  build_checker.yml  code-style-check.yml  cpp-coding-style-check.yml  google-code-style-check.yml  lint.yml  main.yml  merge-back-auto.yml  style-checker.yml  trigger-automerge.yml  unit-test.yml
AutoScripts/: script_release.py
config/: installUpdates.sh  settings.py
config/canBus/: canBusSimu.sh  setup.sh
docs/: Doxyfile  makedocs.sh
src/android_app/CarsData/: build.gradle.kts  settings.gradle.kts
src/autoscripts/: ReleaseScript.py  TransferData.sh  create_sd_card.sh  ecu_reset_hard.sh  reset_hard.sh  start_simulation.sh
src/backend/rest_api/: README.md  requirements.txt
src/config/canBus/: can2udp2can.py
src/ecu_simulation/: simulate.cpp
src/ecu_simulation/BatteryModule/: .gitignore  CANBUS_simulation.sh  Generate  Makefile  Receive
src/ecu_simulation/BatteryModule/test/: BatteryModuleTest.cpp  BatteryModule_Test.cpp  CMakeLists.txt  GenerateFrames.cpp.gcov  GenerateFramesTest.cpp  InterfaceConfigTest.cpp  InterfaceConfig_Test.cpp  ReceiveFramesTest.cpp
src/ecu_simulation/BatteryModule/test/out_ReceiveHandle/include/: HandleFrames.h.gcov.html
src/ecu_simulation/BatteryModule/test/out_ReceiveHandle/src/: ReceiveFrames.cpp.func-sort-c.html
src/ecu_simulation/DoorsModule/: Makefile
src/ecu_simulation/EngineModule/: Makefile
src/ecu_simulation/HVACModule/: Makefile
src/front_end/carsdata/: next.config.mjs  ota.db  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
src/mcu/: Makefile  create_frame.cpp  create_frame.h  main.cpp  mcu_log.txt  receive_frame_module.cpp
src/mcu/include/: CreateFrame.h  GenerateFrame.h  GenerateFrames.h  HandleFrames.h  InterfaceModule.h  MCULogger.h  MCUModule.h  McuModule.h  ReceiveFrame.h  ReceiveFrames.h
src/mcu/src/: CreateFrame.cpp  GenerateFrame.cpp  GenerateFrames.cpp  HandleFrames.cpp  InterfaceModule.cpp  MCUModule.cpp  Makefile  McuModule.cpp  ReceiveFrame.cpp  ReceiveFrames.cpp  create_frame.cpp  main.cpp  mcu  receive_frame_module.cpp
src/mcu/test/: CreateFrame_Test.cpp  CreateInterface.cpp  GenerateFrame_Test.cpp  GenerateFramesTest.cpp  GenerateFrames_Test.cpp  HandleFrames_test.cpp  MCUModuleTest.cpp  ReceiveFramesTest.cpp  ReceiveFrames_test.cpp
src/ota/google_drive_api/: GoogleDriveApi.py
src/rest_api/: README.md  app.py  can2udp2can.py  can_bridge.py  can_interface.py  config.py  endpoints_test.py  requirements.txt
src/rest_api/actions/: access_timing_action.py  actions.py  base_actions.py  diag_session.py  dtc_info.py  ecu_reset.py  engine_info_action.py  generate_frames.py  manual_send_frame.py  read_info_action.py  request_id_action.py  secure_auth.py  security_decorator.py  tester_present.py  update_action.py  write_info_action.py  write_to_doors.py
src/rest_api/app/: .env  actions.py  app.py  can_frame_database_handler.py  can_frames.db  frame_requester.py  generate_frames.py  get_service.py  kivy_app.py  logger_config.py  mcu_ids_database_handler.py  post_service.py  put_service.py  requirements.txt  service_registry.py  test.py  update_action.py  validate_http.py
src/rest_api/routes/: __init__.py  (+2 more)
tools/: script_release.py
(+565 files in other folders)
